--- a/shootyshootymcbangbang/index.html
+++ b/shootyshootymcbangbang/index.html
@@ -7,16 +7,20 @@
     <style>
         /* Western-style font (using a Google font) and off-white color */
         body {
+            background-image: url('images/webpageback.png'); /* Add background image */
+            background-size: cover; 
+            background-repeat: no-repeat; /* Prevent tiling */
+            background-position: center; /* Center the image */
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: #000;
+            
             font-family: 'Cinzel', serif; /* Western-style font */
             overflow: hidden;
-            color: #f4f4f4; /* Slight off-white */
-            user-select: none; /* Prevent text selection */
+            color: #f1f0eb; 
+            user-select: none; 
         }
 
         #game-container {
